Add code-wrap container
This prevents literal code from extending past the page width, like in
the modified Troubleshooting guide.

--- a/_static/tr_style.css
+++ b/_static/tr_style.css
@@ -142,3 +142,10 @@ div.no-table.container tbody {
     background-color: transparent !important;
     text-align: center;
 }
+
+
+/* Styles 'code-wrap' directive to wrap */
+
+div.code-wrap.container pre {
+    white-space: pre-wrap;
+}
