Add ROS 2 documentation

--- a/docs/_static/tr_style.css
+++ b/docs/_static/tr_style.css
@@ -149,3 +149,42 @@ div.no-table.container tbody {
 div.code-wrap.container pre {
     white-space: pre-wrap;
 }
+
+/* Style ROS Interface Distro link */
+
+div.ros-distros-links {
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+    margin-bottom: 20px;
+}
+
+h2.ros-distros-links-titles {
+    margin-bottom: 5px;
+}
+
+div.ros-distros-links img {
+    height: 220px;
+    width: auto;
+}
+
+/* Style sphinx_collapse divs */
+
+div.sphinx_collapse {
+    border-radius: 4px;
+    margin-bottom: 24px;
+    background-color: rgb(204 204 204 / 10%);
+    border-left: 4px solid #00b0f0;
+}
+div.sphinx_collapse:hover {
+    background-color: rgb(204 204 204 / 20%);
+}
+
+div.sphinx_collapse>label.sphinx_collapse__label {
+    margin-bottom: 0px;
+    padding: 10px 0 10px 14px;
+}
+
+div.sphinx_collapse__content {
+    margin-top: 0px;
+}
